# aranea

./: LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
app/: config.py  logger.py  manager.py  registry.py  server.py
app/grpc/: worker.py
app/proto/: parse.proto
app/static/dashboard/: index.html
app/static/dashboard/css/: main.css
app/static/dashboard/js/: main.js
